Agency properties dashboard complete

--- a/app/templates/base_agency_admin.html
+++ b/app/templates/base_agency_admin.html
@@ -227,7 +227,7 @@
                         </a>
                     </li>
                     <li class="{% if request.resolver_match.url_name == 'properties' %}active{% endif %}">
-                        <a href="#">
+                        <a href="/agency/properties/">
                             <i class="fas fa-home"></i>
                             <span>Properties</span>
                         </a>
