--- a/app/templates/main_layout.html
+++ b/app/templates/main_layout.html
@@ -68,8 +68,8 @@
                 <div class="col-md-4">
                     <h5>Contact Us</h5>
                     <ul class="contact-info">
-                        <li><i class="fas fa-phone"></i> +27 123 456 789</li>
-                        <li><i class="fas fa-envelope"></i> {{ SUPPORT_EMAIL }}</li>
+                        <li><i class="fas fa-phone"></i> 079 855 7301</li>
+                        <li><i class="fas fa-envelope"></i> machiel@propertyspotter.co.za</li>
                     </ul>
                 </div>
             </div>
