--- a/app/templates/main_layout.html
+++ b/app/templates/main_layout.html
@@ -62,7 +62,7 @@
                     <ul class="footer-links">
                         <li><a href="#featured">Featured Properties</a></li>
                         <li><a href="#about">About Us</a></li>
-                        <li><a href="/contact">Contact</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
